Update delayBeforeCheck configuration

--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -83,6 +83,8 @@ acme:
   challengeType: tls-sni-01
   ## Configure dnsProvider to perform domain verification using dns challenge
   ## Applicable only if using the dns-01 challenge type
+  dnsChallenge:
+    delayBeforeCheck: 0
   dnsProvider:
     name: nil
     auroradns:
